FIX: interest section paragraphs now have text-align center

--- a/styles/interests.css
+++ b/styles/interests.css
@@ -43,6 +43,7 @@
 
 .interest > p {
   font-size: 2em;
+  text-align: center;
 }
 
 @media(max-width: 500px) {
